# zmutil

./: Makefile.am  README  README.md  TODO  configure.ac
src/: Makefile  Makefile.am  Makefile.in  agenda  aupd  automount  cms-add-user  creatres.sh  csv2ics  dlsync.c  empnomail.c  gmacetidy  gmacetidy.1  gmconfig.sh  gmfind  gmfind.1  gmmv  gmmv.1  gmtest  ldmodify  ldsearch  mkcoursecal  mkcourselist  mkcoursepub  mkcourseres  mntbckup  postcal  probecal  prov  quota++  restore  updatecourses  zmauthuniq.1  zmgdlm  zmsoapplot  zmsoapstat  zmzimletmerge
