bin_PROGRAMS = dlsync empnomail

dlsync_SOURCES = dlsync.c
dlsync_LDADD = -lldap

empnomail_SOURCES = empnomail.c

dist_man_MANS = gmmv.1 gmacetidy.1 gmfind.1 zmauthuniq.1

# http://www.gnu.org/software/hello/manual/automake/Scripts.html
dist_bin_SCRIPTS = aupd creatres.sh csv2ics gmacetidy gmfind gmmv gmtest imapsync ldmodify ldsearch mntbckup postcal probecal prov restore zmzimletmerge zmgdlm quota++ cms-add-user mkcoursecal mkcourseres mkcourselist mkcoursepub updatecourses gmconfig.sh zmsoapstat zmsoapplot automount agenda

